@@ -281,6 +281,25 @@ void CBillboardTextSceneNode::OnAnimate(u32 timeMs)
 	if (!camera)
 		return;
 
+	// TODO: Risky - if camera is later in the scene-graph then it's not yet updated here
+	//       CBillBoardSceneNode does it different, but maybe real solution would be to enforce cameras to update earlier?
+	//       Maybe we can also unify the code by using a common base-class or having updateMesh functionality in an animator instead.
+	updateMesh(camera);
+
+	// mesh uses vertices with absolute coordinates so to get a bbox for culling we have to get back to local ones.
+	BBox = Mesh->getBoundingBox();
+	core::matrix4 mat( getAbsoluteTransformation(), core::matrix4::EM4CONST_INVERSE );
+	mat.transformBoxEx(BBox);
+}
+
+const core::aabbox3d<f32>& CBillboardTextSceneNode::getTransformedBillboardBoundingBox(const irr::scene::ICameraSceneNode* camera)
+{
+	updateMesh(camera);
+	return Mesh->getBoundingBox();
+}
+
+void CBillboardTextSceneNode::updateMesh(const irr::scene::ICameraSceneNode* camera)
+{
 	// get text width
 	f32 textLength = 0.f;
 	u32 i;
@@ -347,14 +366,9 @@ void CBillboardTextSceneNode::OnAnimate(u32 timeMs)
 	}
 
 	// make bounding box
-
 	for (i=0; i< Mesh->getMeshBufferCount() ; ++i)
 		Mesh->getMeshBuffer(i)->recalculateBoundingBox();
 	Mesh->recalculateBoundingBox();
-
-	BBox = Mesh->getBoundingBox();
-	core::matrix4 mat( getAbsoluteTransformation(), core::matrix4::EM4CONST_INVERSE );
-	mat.transformBoxEx(BBox);
 }
 
 void CBillboardTextSceneNode::OnRegisterSceneNode()
